--- a/DirectoryPermissionsChecker/MainWindow.xaml
+++ b/DirectoryPermissionsChecker/MainWindow.xaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d"
         DataContext="{StaticResource MainViewModel}"
         Title="Directory Permissions Tool"
-        Height="410"
+        Height="485"
         Width="525"
         ResizeMode="NoResize">
     <DockPanel>
@@ -20,7 +20,7 @@
         </Menu>
         <Grid>
             <Grid Row="0">
-                <StackPanel>
+                <StackPanel IsEnabled="{Binding IsBusy, Converter={StaticResource InverseBooleanConverter}}">
                     <Label Content="Search the following directories:" />
                     <ListBox ItemsSource="{Binding SearchPaths}"
                              BorderThickness="0"
@@ -49,7 +49,7 @@
                                             Visibility="{Binding AddButtonVisibility}" />
                                     <Button DockPanel.Dock="Right"
                                             Content="-"
-                                            Command="{Binding DataContext.RemoveSearchPathCommand, 
+                                            Command="{Binding DataContext.RemoveSearchPath, 
                                                 RelativeSource={RelativeSource AncestorType=ListBox}}"
                                             CommandParameter="{Binding}" />
                                     <Button DockPanel.Dock="Right"
@@ -94,12 +94,54 @@
                                             Visibility="{Binding AddButtonVisibility}" />
                                     <Button DockPanel.Dock="Right"
                                             Content="-"
-                                            Command="{Binding DataContext.RemoveExcludedPathCommand, 
+                                            Command="{Binding DataContext.RemoveExcludedPath, 
                                                 RelativeSource={RelativeSource AncestorType=ListBox}}"
                                             CommandParameter="{Binding}" />
                                     <Button DockPanel.Dock="Right"
                                             Content="Browse..."
                                             Command="{Binding BrowseFolderCommand}" />
+                                    <TextBox DockPanel.Dock="Left"
+                                             Text="{Binding Text,
+                                                Mode=TwoWay,
+                                                UpdateSourceTrigger=PropertyChanged}"
+
+                                             HorizontalAlignment="Stretch"
+                                             HorizontalContentAlignment="Stretch" />
+                                </DockPanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                    <Label Content="Exclude the following groups and users:"/>
+                    <ListBox ItemsSource="{Binding ExcludedGroups}"
+                             BorderThickness="0"
+                             Margin="5 0 5 0"
+                             MaxHeight="48"
+                             Height="48">
+                        <ListBox.ItemContainerStyle>
+                            <Style TargetType="ListBoxItem">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="ListBoxItem">
+                                            <ContentPresenter />
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </ListBox.ItemContainerStyle>
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <DockPanel LastChildFill="True">
+                                    <Button DockPanel.Dock="Right"
+                                            Content="+"
+                                            Command="{Binding DataContext.AddExcludedGroup,
+                                                RelativeSource={RelativeSource AncestorType=ListBox}}"
+                                            CommandParameter="{Binding}"
+                                            Visibility="{Binding AddButtonVisibility}" />
+                                    <Button DockPanel.Dock="Right"
+                                            Content="-"
+                                            Command="{Binding DataContext.RemoveExcludedGroup, 
+                                                RelativeSource={RelativeSource AncestorType=ListBox}}"
+                                            CommandParameter="{Binding}" />
                                     <TextBox DockPanel.Dock="Left"
                                              Text="{Binding Text,
                                                 Mode=TwoWay,
